# jj-rs

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  Vagrantfile  build.rs  docker-compose.yml  docker-env.sh  flake.nix  install.sh  system-pkgs.nix  taplo.toml
.cargo/: config.toml
.github/workflows/: pull.yml  release.yml
src/: lib.rs  macros.rs  main.rs
src/checks/: command.rs  dns.rs  ftp.rs  http.rs  mod.rs  pop3.rs  smtp.rs  ssh.rs  web.rs
src/commands/: activatedefender.rs  apt.rs  backup.rs  busybox.rs  check.rs  check_daemon.rs  clamav.rs  clamav_linux.rs  clamav_windows.rs  dnf.rs  download_shell.rs  durkee.rs  elk.rs  elk_winbeats.rs  enum.rs  enum_linux.rs  enum_windows.rs  file.rs  firewall.rs  get.rs  jq.rs  mod.rs  nft.rs  ports.rs  proxy.rs  serve.rs  siem.rs  smtp.rs  ssh.rs  stat.rs  tcpdump.rs  tmux.rs  useradd.rs  wazuh.rs  wazuh_winagent.rs  zsh.rs
src/commands/check_daemon/: check_thread.rs  daemon.rs  logs.rs  tui.rs
src/commands/check_daemon/tui/: add_check.rs  checks.rs
src/commands/check_daemon/tui/components/: text_input.rs
src/commands/elk/: auditbeat.linux.yml  auditbeat.service  auditbeat.yml  elasticsearch.service  filebeat.linux.yml  filebeat.service  filebeat.windows.yml  filebeat.yml  kibana.service  logstash.service  metricbeat.service  metricbeat.yml  packetbeat.linux.yml  packetbeat.service  packetbeat.windows.yml  packetbeat.yml  pipeline-filter.conf  pipeline-wazuh.conf  pipeline.conf  suricata.yaml  winlogbeat.windows.yml
src/commands/elk/dashboards/: 00-tags.ndjson  10-linux-searches.ndjson  11-linux-overview-dashboard.ndjson  20-windows-searches.ndjson  21-windows-overview-dashboard.ndjson  linux.ndjson  windows.ndjson
src/commands/proxy/: core_ruleset.conf
src/commands/wazuh/: clamav.linux.conf  clamav.windows.conf
src/commands/wazuh/dashboards/: 00-common-visualizations.ndjson  00-complete.ndjson  00-jj-indices.ndjson  01-jj-dashboards.ndjson  01-linux-visualizations.ndjson  02-windows-visualizations.ndjson  10-common-searches.ndjson  11-linux-searches.ndjson  12-windows-searches.ndjson  20-common-dashboards.ndjson  21-linux-dashboards.ndjson  22-windows-dashboards.ndjson  test.ndjson
src/utils/: busybox.rs  checks.rs  clap.rs  containers.rs  curl.h  curl.rs  distro.rs  download_container.rs  logs.rs  mod.rs  modsecurity.rs  nft.rs  os_version.rs  packages.rs  pager.rs  pamtester.rs  passwd.rs  ports.rs  regex.rs  scheduling.rs  shell_audit.rs  ssh.rs  system.rs  systemd.rs  tcpdump.rs
src/utils/checks/: check_fns.rs
src/utils/checks/check_fns/: binary_ports_check.rs  check_fn.rs  filter_check.rs  immediate_tcpdump_check.rs  pam_check.rs  passive_tcpdump_check.rs  service_checks.rs  tcp_connect_check.rs
src/utils/ports/: linux.rs  mod.rs  windows.rs
