[package]
name = "jj-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
colored = "3.0.0"
flate2 = "1.1.5"
libc = "0.2.177"
nix = { version = "0.30.1", features = [
  "fs",
  "process",
  "sched",
  "signal",
  "user",
] }
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking", "json", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
unwrap_used = "deny"
