[package]
name = "jj-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.50", features = ["derive"] }
colored = "3.0.0"
flate2 = "1.1.5"
futures-util = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["server"] }
hyper-util = { version = "0.1.17", features = ["tokio"] }
libc = "0.2.177"
nix = { version = "0.30.1", features = [
  "fs",
  "mount",
  "process",
  "sched",
  "signal",
  "user",
] }
num-traits = "0.2.19"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = [
  "__tls",
  "blocking",
  "json",
  "multipart",
  "rustls-tls",
], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
tokio = { version = "1.48.0", features = ["fs", "net", "rt", "time"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
walkdir = "2.5.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
unwrap_used = "deny"
