[package]
name = "jj-rs"
version = "0.3.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
cfg-if = "1.0.4"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive"] }
color-eyre = "0.6.5"
colored = "3.0.0"
eyre = "0.6.12"
flate2 = "1.1.5"
futures-util = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["server"] }
hyper-util = { version = "0.1.17", features = ["tokio"] }
libc = "0.2.177"
num-traits = "0.2.19"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = [
  "__tls",
  "blocking",
  "json",
  "multipart",
  "rustls-tls",
], default-features = false }
russh = { version = "0.54.6", default-features = false, features = [
  "flate2",
  "ring",
  "rsa",
] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
tar = "0.4.44"
tokio = { version = "1.48.0", features = [
  "fs",
  "io-std",
  "macros",
  "net",
  "rt",
  "signal",
  "time",
] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
tokio-util = { version = "0.7.16", features = ["io"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
walkdir = "2.5.0"
zip = { version = "7.0.0", default-features = false, features = [
  "deflate",
  "deflate-flate2",
] }

[target.'cfg(unix)'.dependencies]
crossterm = "0.29.0"
nix = { version = "0.30.1", features = [
  "fs",
  "mount",
  "poll",
  "process",
  "sched",
  "signal",
  "user",
] }
pcap = { version = "2.3.0", features = ["capture-stream"] }
ratatui = "0.29.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_SystemInformation"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
unwrap_used = "deny"
